# enshell

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  LICENSE  MODEL_LICENSES.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/workflows/: ci.yml
crates/enshell-adapters/: Cargo.toml
crates/enshell-adapters/src/: lib.rs
crates/enshell-cli/: Cargo.toml
crates/enshell-cli/src/: main.rs
crates/enshell-core/: Cargo.toml
crates/enshell-core/src/: cheap_resolver.rs  fastpath.rs  lib.rs
crates/enshell-eval/: Cargo.toml
crates/enshell-eval/src/: lib.rs  main.rs
crates/enshell-intents/: Cargo.toml
crates/enshell-intents/src/: lib.rs
crates/enshell-llama/: Cargo.toml
crates/enshell-llama/src/: lib.rs
crates/enshell-memory/: Cargo.toml
crates/enshell-memory/src/: lib.rs
crates/enshell-model/: Cargo.toml
crates/enshell-model/src/: grammar.rs  lib.rs  prompt.rs
crates/enshell-model/tests/: prompt_golden.rs
crates/enshell-model/tests/golden/: build_prompt.txt  few_shot_examples.txt  intent_grammar.gbnf  intent_tool_schema.json  system_prompt.txt
crates/enshell-os/: Cargo.toml
crates/enshell-os/src/: lib.rs
crates/enshell-policy/: Cargo.toml
crates/enshell-policy/src/: lib.rs  redact.rs
crates/enshell-shell/: Cargo.toml
crates/enshell-shell/src/: lib.rs
crates/enshell-telemetry/: Cargo.toml
crates/enshell-telemetry/src/: lib.rs
crates/enshell-tests/: Cargo.toml
crates/enshell-tests/src/: lib.rs
crates/enshell-tests/tests/: integration.rs  orchestration.rs
docs/contributor-guides/: model-verification.md
docs/planning/: enshell-ai-native-shell-plan.md
docs/security/: safety-model.md
docs/user-guides/: getting-started.md
eval/: read_only.jsonl
packaging/homebrew/: README.md  enshell.rb
