[package]
name = "enshell-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
enshell-adapters = { version = "0.0.0", path = "../enshell-adapters" }
enshell-intents = { version = "0.0.0", path = "../enshell-intents" }
enshell-model = { version = "0.0.0", path = "../enshell-model" }
enshell-os = { version = "0.0.0", path = "../enshell-os" }
enshell-policy = { version = "0.0.0", path = "../enshell-policy" }

[dev-dependencies]
serde_json = "1.0.150"
