[package]
name = "enshell-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "enshell-eval"
path = "src/main.rs"

[dependencies]
enshell-core = { version = "0.0.0", path = "../enshell-core" }
enshell-intents = { version = "0.0.0", path = "../enshell-intents" }
enshell-model = { version = "0.0.0", path = "../enshell-model" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
