[package]
name = "enshell-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "enshell-eval"
path = "src/main.rs"

[dependencies]
enshell-core = { version = "0.0.0", path = "../enshell-core" }
enshell-intents = { version = "0.0.0", path = "../enshell-intents" }
enshell-llama = { version = "0.0.0", path = "../enshell-llama", optional = true }
enshell-model = { version = "0.0.0", path = "../enshell-model" }
enshell-os = { version = "0.0.0", path = "../enshell-os" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# `llama` enables the `--model <path.gguf>` mode: run the fixtures through the
# real llama.cpp/Gemma provider instead of the stub. Off by default (the default
# build compiles no C++); see docs/contributor-guides/model-verification.md.
[features]
default = []
llama = ["dep:enshell-llama", "enshell-llama/llama"]
