[package]
name = "enshell-llama"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
enshell-intents = { version = "0.0.0", path = "../enshell-intents" }
enshell-model = { version = "0.0.0", path = "../enshell-model" }
llama-cpp-2 = { version = "0.1.146", optional = true }

# The real llama.cpp/Gemma 4 provider is behind the `llama` feature so the
# default build (and CI) never compile llama.cpp's C++ or require a model.
# Building with `--features llama` requires cmake + a C++ toolchain (and a GGUF
# model at runtime).
[features]
default = []
llama = ["dep:llama-cpp-2"]
