[package]
name = "enshell-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
enshell-intents = { version = "0.0.0", path = "../enshell-intents" }
enshell-os = { version = "0.0.0", path = "../enshell-os" }
serde_json = "1.0.150"
