[package]
name = "enshell-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dev-dependencies]
enshell-adapters = { path = "../enshell-adapters" }
enshell-core = { path = "../enshell-core" }
enshell-intents = { path = "../enshell-intents" }
enshell-model = { path = "../enshell-model" }
enshell-os = { path = "../enshell-os" }
enshell-policy = { path = "../enshell-policy" }
